# graphics_lib

./: .gitignore  Cargo.toml  LICENSE  index.html
media/: blahaj.mtl  chair.mtl  monkey.mtl  monkey_and_torus.mtl  parallelogram.mtl  sphere.mtl  square.mtl  square_white.mtl
media/export/: IKEA Blahaj.FBX
src/: cli.rs  lib.rs  main.rs  matrix.rs  must_use.rs  three_d.rs  two_d.rs
src/three_d/: VAO.rs  animation.rs  buffer.rs  lights.rs  raytracing.rs  scene.rs  shaders.rs  shape.rs  teapot.rs
src/three_d/raytracing/: aabb.rs  bvh.rs  camera.rs  hit_record.rs  interval.rs  lights.rs  material.rs  onb.rs  opengl.rs  pdf.rs  ray.rs  shape.rs  vector.rs
src/three_d/raytracing/shape/: polyhedron.rs
src/three_d/shaders/: blinn_phong.glsl  blinn_phong_frag.glsl  blinn_phong_frag_10_lights.glsl  default.glsl  gouraud.glsl  gouraud_frag.glsl
src/three_d/shaders/deferred/: blinn_phong_lighting.glsl  blinn_phong_lighting_frag.glsl  blinn_phong_point_light_frag.glsl  blinn_phong_prepass.glsl  blinn_phong_prepass_frag.glsl  emission_frag.glsl
src/three_d/shape/: importing.rs
src/two_d/: shape.rs  triangulate.rs
