[package]
name = "graphics-lib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple library providing 3D rendering and raytracing capabilities"
homepage = "https://github.com/MayNc10/graphics_lib/tree/use-gl"
repository = "https://github.com/MayNc10/graphics_lib/tree/use-gl"
readme = "README.md"
keywords = ["graphics", "raytracing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.24"
image = "0.24"
lazy_static = "1.4.0"
once_cell = "1.18.0"
rand = "0.8.1"
rayon = "1.8.0"
clap = { version = "4.4.8", features = ["derive"]}